tests/fail/struct_destruct_typo_fail.tk
shape Point(x: i32, y: i32)

fn main() -> i32 {
    auto p = Point(x = 10, y = 20)
    auto Point(x1, y) = p
    return 0
}
